[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/level_intro.gd" type="Script" id=1]
[ext_resource path="res://fonts/header.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("label_title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 2, 2.5 ),
"transitions": PoolRealArray( 2, 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1320, 260 ), Vector2( 140, 260 ), Vector2( 240, 260 ), Vector2( 1320, 260 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("label_subtitle:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 2, 1 ),
"update": 0,
"values": [ Vector2( -1040, 400 ), Vector2( -1040, 400 ), Vector2( 240, 400 ), Vector2( 340, 400 ), Vector2( 1280, 400 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("label_title:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.35, 0.7 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 1.25 ), Vector2( 1, 1 ) ]
}

[node name="level_intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="label_title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 680.0
margin_top = -100.0
margin_right = 1680.0
margin_bottom = 100.0
rect_min_size = Vector2( 1000, 200 )
rect_pivot_offset = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "The Good, the Bad and the Veggie"
valign = 1

[node name="label_subtitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 640.0
margin_top = 40.0
margin_right = 1440.0
margin_bottom = 70.0
rect_min_size = Vector2( 800, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Here's a funny subtitle, please laugh, k thx"
align = 2
valign = 1

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 1 )
